# greeting_server

./: .env.example  .gitignore  README.md  pyproject.toml
docker/: .dockerignore  Dockerfile
src/greeting_mcp/: main.py  server.py
src/greeting_mcp/tools/: greeting.py  time.py
tests/: test_greeting.py  test_time.py
